--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,33 @@ body {
 .box {
   margin: 10% 5%;
   display: grid;
-  grid-template-columns: 25% 50% 25%;
+  gap: 2em 2em ;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 50% 50%;
+  
 }
 .box-5 {
-  grid-column: 3/4;
+  grid-column: 4/5;
   grid-row: 1/3;
+  background: hsl(0, 0%, 100%)
+}
+.box-1 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  background: hsl(263, 55%, 52%);
+}
+.box-2 {
+  grid-column: 3/4;
+  grid-row: 1/2;
+  background: hsl(217, 19%, 35%)
+}
+.box-3 {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  background: hsl(0, 0%, 100%)
+}
+.box-4 {
+  grid-column: 2/4;
+  grid-row: 2/3;
+  background: hsl(219, 29%, 14%)
 }
