--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
+  font-family: 'Barlow Semi Condensed';
   font-size: 13px;
-  font-family: Barlow Semi Condensed;
   font-weight: 500, 600;
+  opacity: 50; 
 }
 .container {
   background: hsl(210, 46%, 95%);
@@ -13,30 +14,78 @@ body {
   gap: 2em 2em ;
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: 50% 50%;
-  
+   
 }
 .box-5 {
+  border-radius: 8px;
   grid-column: 4/5;
   grid-row: 1/3;
   background: hsl(0, 0%, 100%)
 }
+
 .box-1 {
+  border-radius: 8px;
   grid-column: 1/3;
   grid-row: 1/2;
   background: hsl(263, 55%, 52%);
 }
 .box-2 {
+  border-radius: 8px;
   grid-column: 3/4;
   grid-row: 1/2;
   background: hsl(217, 19%, 35%)
 }
 .box-3 {
+  border-radius: 8px;
   grid-column: 1/2;
   grid-row: 2/3;
   background: hsl(0, 0%, 100%)
 }
 .box-4 {
+  border-radius: 8px;
   grid-column: 2/4;
   grid-row: 2/3;
   background: hsl(219, 29%, 14%)
+}
+.user-1 {
+  display: inline-block;
+  width: 30px;
+  height: 80px;
+  border-radius: 50%;
+ 
+}
+.user-2 {
+  display: inline-block;
+  width: 30px;
+  height: 80px;
+  border-radius: 50%;
+}
+.user-3 {
+  display: inline-block;
+  width: 30px;
+  height: 80px;
+  border-radius: 50%;
+}
+.user-4 {
+  display: inline-block;
+  width: 30px;
+  height: 80px;
+  border-radius: 50%;
+}
+.user-5 {
+  display: inline-block;
+  width: 30px;
+  height: 80px;
+  border-radius: 50%;
+}
+img {
+  float:left;
+  border-radius: 50%;
+  border: 2px solid white
+}
+h2 {
+  float:left;
+}
+h3 {
+  float:left;
 }
