--- a/styles.css
+++ b/styles.css
@@ -1,91 +1,109 @@
 body {
-  font-family: 'Barlow Semi Condensed';
+  font-family: "Barlow Semi Condensed";
   font-size: 13px;
-  font-weight: 500, 600;
-  opacity: 50; 
 }
 .container {
+  max-width: 1440px;
   background: hsl(210, 46%, 95%);
-  margin: 5% 5%;
+  margin: 5%;
+  padding: 1%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
 .box {
-  margin: 10% 5%;
-  display: grid;
-  gap: 2em 2em ;
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 50% 50%;
-   
-}
-.box-5 {
+  margin: 1rem;
+  padding: 1rem;
+  background: white;
   border-radius: 8px;
-  grid-column: 4/5;
-  grid-row: 1/3;
-  background: hsl(0, 0%, 100%)
 }
 
 .box-1 {
-  border-radius: 8px;
   grid-column: 1/3;
   grid-row: 1/2;
   background: hsl(263, 55%, 52%);
+  color: white;
+  background-image: url(./images/bg-pattern-quotation.svg);
+  background-repeat: no-repeat;
+  background-position: top right;
 }
 .box-2 {
-  border-radius: 8px;
   grid-column: 3/4;
   grid-row: 1/2;
-  background: hsl(217, 19%, 35%)
+  background: hsl(217, 19%, 35%);
+  color: white;
 }
 .box-3 {
-  border-radius: 8px;
   grid-column: 1/2;
   grid-row: 2/3;
-  background: hsl(0, 0%, 100%)
+  background: hsl(0, 0%, 100%);
 }
 .box-4 {
-  border-radius: 8px;
   grid-column: 2/4;
   grid-row: 2/3;
-  background: hsl(219, 29%, 14%)
+  background: hsl(219, 29%, 14%);
+  color: white;
 }
-.user-1 {
-  display: inline-block;
-  width: 30px;
-  height: 80px;
-  border-radius: 50%;
- 
+.box-5 {
+  grid-column: 4/5;
+  grid-row: 1/3;
+  background: hsl(0, 0%, 100%);
 }
-.user-2 {
-  display: inline-block;
-  width: 30px;
-  height: 80px;
-  border-radius: 50%;
+.user {
+  display: flex;
 }
-.user-3 {
-  display: inline-block;
-  width: 30px;
-  height: 80px;
-  border-radius: 50%;
-}
-.user-4 {
-  display: inline-block;
-  width: 30px;
-  height: 80px;
-  border-radius: 50%;
-}
-.user-5 {
-  display: inline-block;
-  width: 30px;
-  height: 80px;
-  border-radius: 50%;
-}
+
 img {
-  float:left;
   border-radius: 50%;
-  border: 2px solid white
+  border: 2px solid white;
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
 }
 h2 {
-  float:left;
+  margin: 0;
+  font-size: 16px;
 }
 h3 {
-  float:left;
+  margin: 6px 0;
+  font-size: 16px;
+  opacity: 50%;
+}
+
+.first {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+.second {
+  font-size: 1rem;
+  font-weight: 500;
+  opacity: 50%;
+  margin-top: 0;
+}
+@media screen and (max-width: 375px) {
+  .container {
+    grid-template-columns: 1fr;
+    width: 100;
+  }
+  .box-1 {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .box-2 {
+    grid-column: 1;
+    grid-row: 2;
+  }
+  .box-3 {
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .box-4 {
+    grid-column: 1;
+    grid-row: 4;
+  }
+  .box-5 {
+    grid-column: 1;
+    grid-row: 5;
+  }
 }
